Configuração do heartbeat.ps1 para teste no windws

--- a/.github/workflows/receive-heartbeat.yml
+++ b/.github/workflows/receive-heartbeat.yml
@@ -35,6 +35,6 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "update: heartbeat received"
+            git commit -m "update: heartbeat recebido!"
             git push
           fi
