--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -2,8 +2,11 @@ name: Watchdog Monitor
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # Executa a cada 10 minutos
-  workflow_dispatch: # Permite execução manual para testes
+    - cron: '*/15 * * * *' # Executa a cada 15 minutos (ajustado para confiabilidade)
+  workflow_dispatch: # Permite execução manual
+  push:
+    paths:
+      - '.github/workflows/watchdog.yml' # Roda ao editar este arquivo
 
 permissions:
   contents: write # Permite que o workflow faça push de alterações
