--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Check Status & Send Alert
+      - name: Verificar se ha queda em andamento
         env:
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-          ADMIN_EMAIL: ${{ secrets.GMAIL_USER }} # Pode ser ajustado via env
+          ADMIN_EMAIL: ${{ secrets.GMAIL_USER }}
           TIMEOUT_MINUTES: "7"
         run: |
           python scripts/watchdog.py
@@ -51,6 +51,6 @@ jobs:
             echo "Nenhuma mudança de status. Tudo ok."
           else
             TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-            git commit -m "alert: system offline detected at $TIMESTAMP"
+            git commit -m "alerta: campus sem resposta detectado em $TIMESTAMP"
             git push
           fi
