--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          VITE_ADMIN_PASSWORD_HASH: ${{ secrets.ADMIN_PASSWORD_HASH }}
+          VITE_GITHUB_REPO: mvmvasconcelos/ifva-on-the-line
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
