Fix: Corrigido nome do secret no workflow
- Alterado de ADMIN_PASSWORD_HASH para VITE_ADMIN_PASSWORD_HASH
- Agora usa o secret correto configurado no GitHub

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          VITE_ADMIN_PASSWORD_HASH: ${{ secrets.ADMIN_PASSWORD_HASH }}
+          VITE_ADMIN_PASSWORD_HASH: ${{ secrets.VITE_ADMIN_PASSWORD_HASH }}
           VITE_GITHUB_REPO: mvmvasconcelos/ifva-on-the-line
 
       - name: Deploy to GitHub Pages
