Fix: Corrigir .gitignore e adicionar HeartbeatMonitor.jsx
- .gitignore estava bloqueando HeartbeatMonitor.jsx
- Agora ignora apenas scripts heartbeat, não componentes React

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-*heartbeat*
+# Scripts de heartbeat locais (não versionar com tokens)
+scripts/*heartbeat*
+**/heartbeat.ps1
+**/heartbeat.sh
 
 # Environment variables
 web/.env
