Feat: Implementar salvamento de configurações via GitHub API
- Novo workflow update-config.yml para atualizar data/status.json
- SettingsModal agora dispara workflow via GitHub API
- Injeta VITE_GITHUB_TOKEN no build (PAT_TOKEN)
- Atualização automática com feedback visual
- Reload automático após salvar

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -40,6 +40,7 @@ jobs:
         env:
           VITE_ADMIN_PASSWORD_HASH: ${{ secrets.VITE_ADMIN_PASSWORD_HASH }}
           VITE_GITHUB_REPO: mvmvasconcelos/ifva-on-the-line
+          VITE_GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
