Feat: Adicionar suporte a notificações via Telegram
- Adiciona função send_telegram() ao watchdog.py
- Suporte dual: Email + Telegram
- Configuração em data/status.json com chat_ids
- Workflow test-telegram.yml para testes manuais
- Watchdog.yml atualizado com TELEGRAM_BOT_TOKEN
- Mensagens formatadas em Markdown com emojis
- Chat ID: 343595545 configurado

--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -28,6 +28,7 @@ jobs:
         env:
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           ADMIN_EMAIL: ${{ secrets.GMAIL_USER }}
           TIMEOUT_MINUTES: "10"
         run: |
